<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.chunb.narchive.presentation.ui.profile.viewmodel.ProfileViewModel" />

        <variable
            name="activity"
            type="com.chunb.narchive.presentation.ui.profile.view.ProfileActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/set_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_profile"
                android:textColor="@color/black_white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/set_profile_iv_user_profile"
            common_setCircleImage="@{viewModel.userProfileImage}"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:background="@drawable/bg_card_200_f7f8f9"
            android:onClick="@{() -> activity.openGallery()}"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_profile_toolbar"
            app:layout_constraintVertical_bias="0.1" />


        <EditText
            android:id="@+id/set_profile_edt_user_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_set_profile_nickname"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="13"
            android:padding="10dp"
            android:text="@={viewModel.userNickName}"
            android:textColor="@color/black_white"
            android:textSize="22sp"
            android:hint="닉네임"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_profile_iv_user_profile"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/profile_tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/set_profile_nickname_notion"
            android:textColor="@color/color_d9d9d9"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/set_profile_edt_user_nickname"
            app:layout_constraintTop_toBottomOf="@id/set_profile_edt_user_nickname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* 이용약관은 여기를 클릭해주세요."
            android:textColor="@color/color_d9d9d9"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:onClick="@{() -> activity.openAllowDialog()}"
            app:layout_constraintTop_toBottomOf="@id/profile_tv_notice"
            app:layout_constraintStart_toStartOf="@id/profile_tv_notice" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/selector_btn_finish"
            android:text="@string/common_correct"
            android:onClick="@{() -> activity.uploadToFB()}"
            android:enabled="@{viewModel.isProfileFinished}"
            android:textColor="@color/white_black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>