<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bookData"
            type="com.chunb.narchive.data.remote.response.Book" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_4_f7f8f9"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:padding="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_shape_ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/item_archive_vp_inner_iv_book_cover"
                setImage="@{bookData.bookImageThumbnail}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />

            <TextView
                android:id="@+id/item_archive_vp_inner_tv_book_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{bookData.bookTitle}"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/item_archive_vp_inner_tv_book_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/item_archive_vp_inner_iv_book_cover"
                app:layout_constraintTop_toTopOf="@id/item_archive_vp_inner_iv_book_cover"
                tools:text="책 제목입니다" />

            <TextView
                android:id="@+id/item_archive_vp_inner_tv_book_author"
                setBookAndMovieInfoForm="@{bookData.author}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_727272"
                app:layout_constraintBottom_toTopOf="@id/item_archive_vp_inner_tv_book_published"
                app:layout_constraintEnd_toEndOf="@+id/item_archive_vp_inner_tv_book_name"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/item_archive_vp_inner_tv_book_name"
                app:layout_constraintTop_toBottomOf="@id/item_archive_vp_inner_tv_book_name"
                tools:text="@string/book_author" />

            <TextView
                android:id="@+id/item_archive_vp_inner_tv_book_published"
                setBookAndMovieInfoForm="@{bookData.publisher}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_727272"
                app:layout_constraintBottom_toTopOf="@id/item_archive_vp_inner_tv_book_date"
                app:layout_constraintEnd_toEndOf="@+id/item_archive_vp_inner_tv_book_name"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/item_archive_vp_inner_tv_book_name"
                app:layout_constraintTop_toBottomOf="@id/item_archive_vp_inner_tv_book_author"
                tools:text="@string/book_publisher" />

            <TextView
                android:id="@+id/item_archive_vp_inner_tv_book_date"
                setBookAndMovieInfoForm="@{bookData.publishedDate}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_727272"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/item_archive_vp_inner_tv_book_name"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/item_archive_vp_inner_tv_book_name"
                app:layout_constraintTop_toBottomOf="@id/item_archive_vp_inner_tv_book_published"
                tools:text="@string/book_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>