<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.chunb.narchive.presentation.ui.main.setting.view.SettingFragment" />

        <variable
            name="viewModel"
            type="com.chunb.narchive.presentation.ui.main.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fg_setting_layout_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_setting_top_user_profile"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent">
            
            <ImageView
                android:id="@+id/fg_setting_iv_profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                common_setCircleImage="@{viewModel.userData.userProfileImage}"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/fg_setting_tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="지연이 바보"
                android:text="@{viewModel.userData.userNickName}"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toBottomOf="@id/fg_setting_iv_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ffffff_20"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fg_setting_tv_profile"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/fg_setting_tv_title_count_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_write_archive"
                    android:textSize="15sp"
                    android:textColor="@color/black_white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/fg_setting_view_divider_1"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/count_write(viewModel.userData.contentCount)}"
                    android:textSize="18sp"
                    android:textColor="@color/black_white"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/fg_setting_tv_title_count_write"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/fg_setting_tv_title_count_write"
                    app:layout_constraintEnd_toEndOf="@id/fg_setting_tv_title_count_write" />

                <View
                    android:id="@+id/fg_setting_view_divider_1"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/color_d9d9d9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.7"
                    app:layout_constraintStart_toEndOf="@id/fg_setting_tv_title_count_write"
                    app:layout_constraintEnd_toStartOf="@id/fg_setting_tv_title_count_book"/>

                <TextView
                    android:id="@+id/fg_setting_tv_title_count_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_book_archive"
                    android:textSize="15sp"
                    android:textColor="@color/black_white"
                    app:layout_constraintStart_toEndOf="@id/fg_setting_view_divider_1"
                    app:layout_constraintEnd_toStartOf="@id/fg_setting_view_divider_2"
                    app:layout_constraintTop_toTopOf="@+id/fg_setting_tv_title_count_write"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/count_book(viewModel.userData.bookCount)}"
                    android:textSize="18sp"
                    android:textColor="@color/black_white"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/fg_setting_tv_title_count_book"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/fg_setting_tv_title_count_book"
                    app:layout_constraintEnd_toEndOf="@id/fg_setting_tv_title_count_book" />

                <View
                    android:id="@+id/fg_setting_view_divider_2"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/color_d9d9d9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.7"
                    app:layout_constraintStart_toEndOf="@id/fg_setting_tv_title_count_book"
                    app:layout_constraintEnd_toStartOf="@id/fg_setting_tv_title_count_movie"/>

                <TextView
                    android:id="@+id/fg_setting_tv_title_count_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_movie_archive"
                    android:textSize="15sp"
                    android:textColor="@color/black_white"
                    app:layout_constraintStart_toEndOf="@id/fg_setting_view_divider_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fg_setting_tv_title_count_write"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/count_movie(viewModel.userData.movieCount)}"
                    android:textSize="18sp"
                    android:textColor="@color/black_white"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/fg_setting_tv_title_count_movie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/fg_setting_tv_title_count_movie"
                    app:layout_constraintEnd_toEndOf="@id/fg_setting_tv_title_count_movie" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fg_setting_rv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/fg_setting_layout_top"
            android:layout_margin="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>